--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,7 +1,6 @@
 .shop-container {
   display: grid;
   grid-template-columns: 3fr 1fr;
-  margin: 80px 20px 20px 20px;
   gap: 20px;
   position: relative;
 }
@@ -13,9 +12,11 @@
 }
 
 .cart-container {
-    position: relative;
+  position: relative;
 }
 
 .cart-items {
-    position: fixed;
+  position: fixed;
+  height: 100%;
+  overflow-y: scroll;
 }
